# ai-venture-studio

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/test-thread/docs/: Assumptions.md  Business_Logic.md
artifacts/test-transition/docs/: Assumptions.md  Business_Logic.md  MVP_Scope.md  Product_Backlog.md  Sprint_1_TODO.md
artifacts/user_387931746/docs/: Assumptions.md  Business_Logic.md  Design_Strategy.json  Design_System.md  Design_Tokens.json  MVP_Scope.md  Product_Backlog.md  Prototype_Link.md  Sprint_1_TODO.md
docs/: Doc Review Edit ( Telegram Web App).md  Foundation_Template.md  PHASES_INDEX.md  PHASE_01_Visionary_Business_Audit.md  PHASE_02_Product_Management_Backlog_MVP.md  PHASE_03_UI_UX_Design_Google_Stitch.md  PHASE_04_System_Architecture_HDL.md  PHASE_05_Project_Initialization_Materialization.md  PHASE_06_TDD.md  PHASE_07_Implementation_Cursor_Factory.md  PHASE_08_Visual_QA_Patch_Loops.md  PHASE_09_Guardrails_Sentinel_Vault.md  PHASE_10_DevOps_Growth_SRE.md  a_prompt.txt  description-2.1.md
infra/: Dockerfile  docker-compose.yml
src/: __init__.py  main.py
src/core/: __init__.py  config.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/integrations/: __init__.py  stitch_client.py  stitch_prompt_builder.py
src/persistence/: __init__.py  postgres.py
src/telegram_bot/: __init__.py  bot.py
tests/: __init__.py  test_graph.py  test_stitch_integration.py
